# visor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.sh  pyproject.toml  test_db.py  test_geometry.js  test_get_map.py  test_jsonrpc.py  test_mcp.py  test_telemetry_server.py  test_tool.py  test_ts.py  visor_memory.db  visor_memory.db-journal
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add_language.yml  bug_report.yml  feature_request.yml
.github/workflows/: auto-label.yml  ci.yml  codeql.yml  publish.yml  stale.yml
demo/: comparison.md  demo_output.json  demo_script.md  recording_guide.md
docs/: ARCHITECTURE.md  FAQ.md  MCP_TOOLS.md  TROUBLESHOOTING.md
examples/: use_cases.md
scripts/: bootstrap.sh
src/visor/: __init__.py  cli.py  server.py
src/visor/db/: client.py  embeddings.py  migration.py
src/visor/extension/: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
src/visor/extension/hud-dist/: index.html
src/visor/extension/src/: extension.ts
src/visor/hud/: index.html  package-lock.json  package.json  playwright.config.ts  test_three.js
src/visor/hud/e2e/: drift.spec.ts
src/visor/hud/playwright-report/: index.html
src/visor/hud/src/: App.tsx  index.css
src/visor/hud/src/components/: ErrorBoundary.tsx  GraphCanvas.tsx  TelemetryHUD.tsx
src/visor/parser/: treesitter.py  watcher.py
src/visor/tools/: context_engine.py  core.py
tests/: conftest.py  test_cli.py  test_context_engine.py  test_db_client.py  test_tools.py  test_treesitter.py
tests/fixtures/c/: server.c
tests/fixtures/cpp/: server.cpp
tests/fixtures/go/: main.go
tests/fixtures/java/: Server.java
tests/fixtures/rust/: main.rs
