[project]
name = "visor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arunav Mandal", email = "dibun75@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
visor-mcp = "visor.server:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
