[project]
name = "visor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arunav Mandal", email = "dibun75@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.46",
    "mcp>=1.27.0",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "sentence-transformers>=5.4.0",
    "sqlite-vec>=0.1.9",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "watchdog>=6.0.0",
]

dependency-groups = [
    "dev"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
visor-mcp = "visor.server:main"
visor = "visor.cli:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
